--- a/cce3.html
+++ b/cce3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Core Assignment 2</title>
+    <title>Core Assignment 2 Project</title>
     <link rel="stylesheet" href="cce3.css">
 </head>
 <body>
