--- a/cce3.html
+++ b/cce3.html
@@ -8,7 +8,6 @@
 <body>
     <header>
         <h1 class = "title">EV vs Gas Vehicles & CO2 Emissions</h1>
-        <h1 class = "title">GET TO WORK! Trial 1</h1>
     </header>
     <div class = "about">
         <h2><strong>About This Website</strong></h2>
@@ -18,7 +17,6 @@
         </p>
     </div>
     <div class="graph">
-        <img src="initialplot.png" alt="emissions chart">
-    </div>
+        <iframe src="interactive_plot.html" width="900" height="600" ></iframe>
 </body>
 </html>
