--- a/cce3.html
+++ b/cce3.html
@@ -13,7 +13,14 @@
         <h2><strong>About This Website</strong></h2>
         <p>
             This website was created to track the trends between EV and non-EV
-            car sales, and CO2 emissions over time.
+            car sales, and CO2 emissions over time. The data that we have collected
+            for this graph is based strictly in the United States, and it starts
+            from around 2011. We collected data regarding EV car sales, Non-EV car sales (gas cars),
+            and CO2 emissions in the United States. We first standardized the units for each data set
+            that we were working with in order to have a graph that can accurately (and hopefully) show
+            a trend/correlation between these data sets. What we ended up with was this interactive line 
+            graph that displays the three data sets that we worked with. When hovering over the graph, 
+            you are able to see the exact year and the original units of the data point.
         </p>
     </div>
     <div class="graph">
